# csc-functional-cpp20

./: .gitignore  .gitpod.yml  .parcelrc  .prettierrc.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
cpp/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  conanfile.py  dependencies.json  pyproject.toml
cpp/cmake/: dev-mode.cmake  fp_cpp20_dependencies.cmake  fp_cpp20_targets.cmake  install-config.cmake  install-rules.cmake  lint.cmake  prelude.cmake  spell.cmake  variables.cmake
cpp/source/fp/: action.h  main.cpp  parser.cpp  parser.h  todos-v1.cpp  todos-v1.h  todos.cpp  todos.h  undo.h
cpp/source/oop/: action.h  clidriver.cpp  clidriver.h  main.cpp  parser.cpp  parser.h  todo.h  tododriver.cpp  tododriver.h  todomanager.cpp  todomanager.h
src/: codefiles.ts  content.ts  content.tsx  cpp-fp.html  cpp-fp.tsx  data.ts  debug.ts  example-presentation.html  example-presentation.tsx  fp-content.tsx  fp.ts  fpcpp20.tsx  helloworld.tsx  index.html  index.tsx  presentation.ts  qrcode.js  reactreveal.css  renderer.tsx  reveal.tsx  slides.ts
ts/: fp.ts  slides.tsx
